{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e756332a-40db-4302-89ac-bffd90599fbc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f2f4bd8c-da6d-41b5-a5b7-155eec0425b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Bump",
                    "type": "Button",
                    "id": "873ce739-9348-4687-8ad1-6e60b850c381",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Set",
                    "type": "Button",
                    "id": "47dc7cdf-fafa-40fc-9f86-9d5f77a13e31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "24e81e98-92a6-4139-8e2d-90b08be5430f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spike",
                    "type": "Button",
                    "id": "eb66dd0e-c42b-4909-af48-91e5a609cf89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29b4c7c8-11d7-4ad6-8ba4-37dec8b4c54f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2ec9074-4ade-49b8-902a-4317f1fa0b97",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8689fa0d-413e-4d18-a06e-811e5e3f4b21",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Set",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf142e69-a19b-4d25-aa1b-4274f3d03d1a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f8745c2-bffb-41af-ab35-e6ed6d8ee40d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spike",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}